<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgwelcome"
    tools:context=".Onboarding.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:src="@drawable/logo" />
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/et_style"
            android:hint="@string/username"
            android:textColor="@color/colorPrimary" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_style"
            android:hint="@string/password"
            android:textColor="@color/colorPrimary" />
        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bt_style"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_style_register"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNextWelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvPrevLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/baumans"
            android:gravity="bottom|start"
            android:text="@string/back"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>
</FrameLayout>