<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgwelcome"
    tools:context=".Onboarding.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:id="@+id/imgWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome" />

        <TextView
            android:id="@+id/textTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="@string/title1"
            android:textColor="@color/colorWhite"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textDesc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center"
            android:text="@string/desc1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNextWelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNextWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="250dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/baumans"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

</FrameLayout>